# CppND-Capstone-T4-DomesticElectricManagement

./: CMakeLists.txt
src/: main.cpp
src/IO/: IInput.h  IOutput.h  InputSimulation.cpp  InputSimulation.h  OutputSimulation.cpp  OutputSimulation.h
src/StateManagement/: SystemState.cpp  SystemState.h
src/lib/: MessageQueue.cpp  MessageQueue.h
